--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="./favicon.png">
     <link rel="preload" href="/Tahoma.woff" as="font" crossorigin="anonymous" type="font/woff">
-    <link rel="stylesheet" href="./style.css">
-    <script src="./lib/socket.io.js"></script>
-    <script src="./lib/speakClient.js"></script>
-    <script src="./lib/cmenu.js"></script>
-    <script src="./lib/create.js"></script>
+    <link rel="stylesheet" href="https://bonziworld.org/style.css">
+    <script src="https://bonziworld.org/lib/socket.io.js"></script>
+    <script src="https://bonziworld.org/lib/speakClient.js"></script>
+    <script src="https://bonziworld.org/lib/cmenu.js"></script>
+    <script src="https://bonziworld.org/lib/create.js"></script>
     <script src="./script.js"></script>
 </head>
 <body>
